chore: Ensure EPP flags are configurable via Helm chart

--- a/config/charts/inferencepool/templates/epp-deployment.yaml
+++ b/config/charts/inferencepool/templates/epp-deployment.yaml
@@ -44,6 +44,20 @@ spec:
         - "--model-server-metrics-path={{ .Values.inferenceExtension.modelServerMetricsPath }}"
         - "--model-server-metrics-scheme={{ .Values.inferenceExtension.modelServerMetricsScheme }}"
         - "--model-server-metrics-https-insecure-skip-verify={{ .Values.inferenceExtension.modelServerMetricsHttpsInsecureSkipVerify }}"
+        - "--model-server-metrics-port={{ .Values.inferenceExtension.modelServerMetricsPort }}"
+        - "--secure-serving={{ .Values.inferenceExtension.secureServing }}"
+        - "--health-checking={{ .Values.inferenceExtension.healthChecking }}"
+        - "--cert-path={{ .Values.inferenceExtension.certPath }}"
+        - "--destination-endpoint-hint-key={{ .Values.inferenceExtension.destinationEndpointHintKey }}"
+        - "--destination-endpoint-hint-metadata-namespace={{ .Values.inferenceExtension.destinationEndpointHintMetadataNamespace }}"
+        - "--fairness-id-header-key={{ .Values.inferenceExtension.fairnessIDHeaderKey }}"
+        - "--total-queued-requests-metric={{ .Values.inferenceExtension.totalQueuedRequestsMetric }}"
+        - "--kv-cache-usage-percentage-metric={{ .Values.inferenceExtension.kvCacheUsagePercentageMetric }}"
+        - "--lora-info-metric={{ .Values.inferenceExtension.loraInfoMetric }}"
+        - "--refresh-metrics-interval={{ .Values.inferenceExtension.refreshMetricsInterval }}"
+        - "--refresh-prometheus-metrics-interval={{ .Values.inferenceExtension.refreshPrometheusMetricsInterval }}"
+        - "--metrics-staleness-threshold={{ .Values.inferenceExtension.metricsStalenessThreshold }}"
+        - "--config-text={{ .Values.inferenceExtension.configText }}"
         {{- if eq (.Values.inferencePool.modelServerType | default "vllm") "triton-tensorrt-llm" }}
         - --total-queued-requests-metric
         - "nv_trt_llm_request_metrics{request_type=waiting}"
