--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -7,12 +7,34 @@ inferenceExtension:
     pullPolicy: Always
   extProcPort: 9002
   env: []
-  enablePprof: true # Enable pprof handlers for profiling and debugging
+  enablePprof: true  # Enable pprof handlers for profiling and debugging
   modelServerMetricsPath: "/metrics"
   modelServerMetricsScheme: "http"
   modelServerMetricsHttpsInsecureSkipVerify: true
-  # This is the plugins configuration file. 
+  grpcPort: 9002
+  grpcHealthPort: 9003
+  metricsPort: 9090
+  destinationEndpointHintMetadataNamespace: "envoy.lb"
+  destinationEndpointHintKey: "x-gateway-destination-endpoint"
+  fairnessIDHeaderKey: "x-gateway-inference-fairness-id"
+  poolName: ""
+  poolNamespace: "default"
+  refreshMetricsInterval: "50ms"
+  refreshPrometheusMetricsInterval: "5s"
+  secureServing: true
+  healthChecking: false
+  totalQueuedRequestsMetric: "vllm:num_requests_waiting"
+  kvCacheUsagePercentageMetric: "vllm:gpu_cache_usage_perc"
+  loraInfoMetric: "vllm:lora_requests_info"
+  certPath: ""
+  configFile: ""
+  configText: ""
+  metricsStalenessThreshold: "2s"
+  
   pluginsConfigFile: "default-plugins.yaml"
+  logVerbosity: 1
+  
+  # This is the plugins configuration file.
   # pluginsCustomConfig:
   #   custom-plugins.yaml: |
   #     apiVersion: inference.networking.x-k8s.io/v1alpha1
@@ -34,8 +56,8 @@ inferenceExtension:
   # Example environment variables:
   # env:
   #   KV_CACHE_SCORE_WEIGHT: "1"
-
   # Define additional container ports
+  modelServerMetricsPort: 0
   extraContainerPorts: []
   # Define additional service ports
   extraServicePorts: []
@@ -43,9 +65,9 @@ inferenceExtension:
 inferencePool:
   targetPortNumber: 8000
   modelServerType: vllm # vllm, triton-tensorrt-llm
-  # modelServers: # REQUIRED
-    # matchLabels: 
-    #   app: vllm-llama3-8b-instruct
+  modelServers:
+    matchLabels:
+      app: vllm-llama3-8b-instruct
 
 provider:
   name: none
