--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -1,4 +1,5 @@
 inferenceExtension:
+  # Number of replicas
   replicas: 1
   image:
     name: epp
@@ -24,8 +25,6 @@ inferenceExtension:
   kvCacheUsagePercentageMetric: "vllm:gpu_cache_usage_perc"
   loraInfoMetric: "vllm:lora_requests_info"
   certPath: ""
-  configFile: ""
-  configText: ""
   metricsStalenessThreshold: "2s"
   
   pluginsConfigFile: "default-plugins.yaml"
@@ -62,9 +61,9 @@ inferenceExtension:
 inferencePool:
   targetPortNumber: 8000
   modelServerType: vllm # vllm, triton-tensorrt-llm
-  modelServers:
-    matchLabels:
-      app: vllm-llama3-8b-instruct
+  # modelServers:
+    # matchLabels:
+      # app: vllm-llama3-8b-instruct
 
 provider:
   name: none
