--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -61,7 +61,7 @@ inferenceExtension:
 inferencePool:
   targetPortNumber: 8000
   modelServerType: vllm # vllm, triton-tensorrt-llm
-  # modelServers:
+  # modelServers:  # REQUIRED
     # matchLabels:
       # app: vllm-llama3-8b-instruct
 
