--- a/config/charts/inferencepool/templates/inferencepool.yaml
+++ b/config/charts/inferencepool/templates/inferencepool.yaml
@@ -1,5 +1,5 @@
 {{ include "gateway-api-inference-extension.validations.inferencepool.common" $ }}
-apiVersion: inference.networking.k8s.io/v1
+apiVersion: {{ .Values.inferencePool.apiVersion }}
 kind: InferencePool
 metadata:
   name: {{ .Release.Name }}
