Update helm chart to accomodate for targetPortNumber in v1alpha2

--- a/config/charts/inferencepool/templates/inferencepool.yaml
+++ b/config/charts/inferencepool/templates/inferencepool.yaml
@@ -7,10 +7,17 @@ metadata:
   labels:
     {{- include "gateway-api-inference-extension.labels" . | nindent 4 }}
 spec:
+  {{ if eq .Values.inferencePool.apiVersion "inference.networking.x-k8s.io/v1alpha2"}}
+  targetPortNumber:
+    {{- range .Values.inferencePool.targetPorts }}
+      - number: {{ .number }}
+    {{- end }}
+  {{ else }}
   targetPorts:
     {{- range .Values.inferencePool.targetPorts }}
       - number: {{ .number }}
     {{- end }}
+  {{- end}}
   selector:
     matchLabels:
       {{- if .Values.inferencePool.modelServers.matchLabels }}
