Experimental SLO-Aware Routing and Latency Prediction  (#1568)
* add latency predictor

* add cv in model and update epp deployment

* bug fix

* track mape for predictions

* add running queue size to metrics

* add xgboost regressor and update tpot sampling logic

* emit predicted and actual ttft tpot in body

* seperate servers for training and prediction

* add latency predictor

put the predictor functions in director in a helper function

add scores to reqcxt

record prediction duration metrics

add prefix cache score to model input

slo based routing changes

retreive  request priority queue from the datastore

update scoring logic

* better inital implemenation

Add scheduling profile, working state

remove latencypredictor from director

Move all latency prediction logic out of director and into scheduling profile. Make all Request/Response plugins take in RequestContext

* progress towards fixing up merge conflicts from latency predictor merge

* More refactor progress, fixing and adding tests

* working state, latency prediction

* Clean up changes, remove unneeded files, working functionality without latency flag and scheduling plugins

* Rebase cleanup, remove duplicate lines

* Integrate new alpha-beta slo scoring into scoring plugin

* Fix prefix cache scoring for slo-aware routing

* Add pycache or latency predictor to gitignore

* Rebase with main

* Fix prefix cache scoring being piped to latencyprediction_helper

* add dependancies in scorer

* chage to single profile

* chage to single profile

* restore two profiles

* restore two profiles

* restore two profiles

* update admit request to shed based on predictions

* add TODOs for future changes

* Change artifact registry references to personal compiled images

* Fix existing non-slo aware routing unit tests

* update latency predictor with better eval metrics

* Fix saturation detector unit test

* Change naming of SLO headers and prediction based routing header

* Remove port 9002 service on

--- a/config/manifests/inferencepool-resources.yaml
+++ b/config/manifests/inferencepool-resources.yaml
@@ -3,21 +3,16 @@
 #  - ./conformance/resources/manifests/manifests.yaml
 #  - ./site-src/guides/inferencepool-rollout.md
 ---
-apiVersion: inference.networking.k8s.io/v1
+apiVersion: inference.networking.x-k8s.io/v1alpha2
 kind: InferencePool
 metadata:
   name: vllm-llama3-8b-instruct
 spec:
-  targetPorts:
-    - number: 8000
+  targetPortNumber: 8000
   selector:
-    matchLabels:
-      app: vllm-llama3-8b-instruct
-  endpointPickerRef:
+    app: vllm-llama3-8b-instruct
+  extensionRef:
     name: vllm-llama3-8b-instruct-epp
-    kind: Service
-    port:
-      number: 9002
 ---
 apiVersion: v1
 kind: Service
@@ -62,13 +57,15 @@ spec:
       terminationGracePeriodSeconds: 130
       containers:
       - name: epp
-        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:main
+        image: us-central1-docker.pkg.dev/benjaminbraun-gke-dev/slo-routing/slo-routing-epp-exp # us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:main
         imagePullPolicy: Always
         args:
         - --pool-name
         - "vllm-llama3-8b-instruct"
         - "--pool-namespace"
         - "default"
+        - --pool-group
+        - "inference.networking.x-k8s.io"
         - --v
         - "4"
         - --zap-encoder
