--- a/config/manifests/gateway/gke/sglang-httproute.yaml
+++ b/config/manifests/gateway/gke/sglang-httproute.yaml
@@ -1,1 +1,18 @@
-# Sample http route for GKE Gateway to route traffic to sglang InferencePool
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: llm-route
+spec:
+  parentRefs:
+  - group: gateway.networking.k8s.io
+    kind: Gateway
+    name: inference-gateway
+  rules:
+  - backendRefs:
+    - group: inference.networking.k8s.io
+      kind: InferencePool
+      name: sgl-llama3-8b-instruct
+    matches:
+    - path:
+        type: PathPrefix
+        value: /
