Set modelserver type as sglang

--- a/config/charts/inference-extension/templates/_deployment.yaml
+++ b/config/charts/inference-extension/templates/_deployment.yaml
@@ -115,6 +115,7 @@ spec:
               - --{{ $key }}
               - "{{ $value }}"
           {{- end }}
+          # SGLang specific metrics.
           {{- if eq $modelServerType "sglang" }}
             - --total-queued-requests-metric="sglang:num_queue_reqs"
             - --kv-cache-usage-percentage-metric="sglang:token_usage"
